# Dorsia-Electro

./: .gitignore  README.md  docker-compose.yml  oil_hack.py  package-lock.json  package.json  vmagent.yml
IIoT/: Dockerfile  pyproject.toml  test.py
IIoT/app/: main.py
IIoT/app/api/v1/: __init__.py  load.py  metrics.py
IIoT/app/services/: services.py
monitoring_service/: .env  Dockerfile  pyproject.toml
monitoring_service/src/api/v1/: __init__.py  defect.py  motor.py
monitoring_service/src/core/: database.py
monitoring_service/src/models/: __init__.py  models.py
monitoring_service/src/repositories/: __init__.py  defect.py  motor.py
monitoring_service/src/schemas/: __init__.py  defect.py  motor.py
monitoring_service/src/services/: __init__.py  defect.py  motor.py
mqtt_exporter/: Dockerfile  exporter.py  requirements.txt
scada/: package-lock.json  package.json
scada/src/: App.tsx
scada/src/components/Slidebar/: MonitoringItem.tsx  MonitoringSlidebar.tsx
scada/src/components/ui/: SidebarHeader.tsx
scada/src/components/ui/ui-base/: Button.tsx
scada/src/helpers/: useError.ts
scada/src/hooks/: useMap.ts  useSidebar.tsx
scada/src/layouts/: MonitoringLayout.tsx
scada/src/providers/: SidebarProvider.tsx
scada/src/tests/Sidebar/: Sidebar.tsx
scada/src/types/Slidebar/: Slidebar-uiProps.tsx  SlidevarProps.tsx
scada/src/utils/: Images.tsx
